# module/customer/delivery/http/http.go
@@ -1,8 +1,8 @@
 package http
 
 import (
+	"crms/model"
 	"crms/module/customer"
-	"fmt"
 	"github.com/gin-gonic/gin"
 )
 
@@ -15,7 +15,8 @@ func NewCustomerHandler(e *gin.Engine, ser customer.Service) {
 		ser: ser,
 	}
 	e.GET("/api/customerList", handler.GetCustomerList)
-	e.POST("/api/customer", handler.GetCustomer)
+	e.GET("/api/customer", handler.GetCustomer)
+	e.POST("/api/customer", handler.CreateCustomer)
 }
 
 // GetCustomerList @Summary GetCustomerList
@@ -41,17 +42,16 @@ func (u *CustomerHandler) GetCustomerList(c *gin.Context) {
 // @Description Get Customer by ID
 // @Tags Customer
 // @Produce application/json
-// @Param ID formData string true "Customer ID"
+// @Param ID query string true "Customer ID" example(L123546789)
 // @Success 200 {object} model.Customer
 // @Failure 500 {string} string "{"Message": err.Error()}"
-// @Router /customer [post]
+// @Router /customer [get]
 func (u *CustomerHandler) GetCustomer(c *gin.Context) {
-	ID := c.PostForm("ID")
-	fmt.Println(ID)
+	ID := c.Query("ID")
 	customerData, err := u.ser.GetCustomer(ID)
 	if err != nil {
 		if err.Error() == "error CRMS : There is no this customer" {
-			c.JSON(210, gin.H{
+			c.JSON(200, gin.H{
 				"Message": err.Error(),
 			})
 			return
@@ -63,4 +63,39 @@ func (u *CustomerHandler) GetCustomer(c *gin.Context) {
 		}
 	}
 	c.JSON(200, customerData)
+}
+
+// CreateCustomer @Summary CreateCustomer
+// @Description Create Customer
+// @Tags Customer
+// @Accept json
+// @Produce application/json
+// @Param Customer body model.Customer true "Customer Information"
+// @Success 200 {object} model.Customer
+// @Failure 500 {string} string "{"Message": err.Error()}"
+// @Router /customer [post]
+func (u *CustomerHandler) CreateCustomer(c *gin.Context) {
+	json := model.Customer{}
+	if err := c.BindJSON(&json); err != nil {
+		c.JSON(500, gin.H{
+			"Message": err.Error(),
+		})
+		return
+	}
+	createCustomer, err := u.ser.CreateCustomer(&json)
+	if err != nil {
+		if err.Error() == "error CRMS : This customer is already existed" {
+			c.JSON(200, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		} else {
+			c.JSON(500, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		}
+	}
+
+	c.JSON(200, createCustomer)
 }
